--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1600,4 +1600,5 @@
     <string name="enforce_bw">Enforce B/W</string>
     <string name="enforce_bw_sub">Barcode Image will be fully black and white and not colored by app\'s theme</string>
     <string name="barcodes_sub">Scan any Barcode (QR, EAN, AZTEC, …) and get it\'s content or paste your text to generate new one</string>
+    <string name="no_barcode_found">No Barcode Found</string>
 </resources>
