--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1601,4 +1601,5 @@
     <string name="enforce_bw_sub">Barcode Image will be fully black and white and not colored by app\'s theme</string>
     <string name="barcodes_sub">Scan any Barcode (QR, EAN, AZTEC, …) and get it\'s content or paste your text to generate new one</string>
     <string name="no_barcode_found">No Barcode Found</string>
+    <string name="generated_barcode_will_be_here">Generated Barcode Will Be Here</string>
 </resources>
