--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1619,4 +1619,5 @@
     <string name="invisible_mode_sub">Use steganography to create eye invisible watermarks inside bytes of your images</string>
     <string name="use_lsb">Use LSB</string>
     <string name="use_lsb_sub">LSB (Less Significant Bit) steganography method will be used, FD (Frequency Domain) otherwise</string>
+    <string name="auto_remove_red_eyes">Auto Remove Red Eyes</string>
 </resources>
