--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1655,5 +1655,5 @@
     <string name="bottom_to_top">Bottom to Top</string>
     <string name="liquid_glass">Liquid Glass</string>
     <string name="liquid_glass_sub">A switch based on recently announced IOS 26 and it\'s liquid glass design system</string>
-    <string name="pick_image_or_base64">Pick image or paste/import base64 data below</string>
+    <string name="pick_image_or_base64">Pick image or paste/import Base64 data below</string>
 </resources>
